service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: feriel-service
spec:
  selector:
    app: feriel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2241
      nodePort: 30001  # les ports sont entre entre 30000 et 32767 voila voilaaa
  type: NodePort
