ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feriel-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: feriel.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feriel-service
            port:
              number: 80
